# esp32-ros2-arm

./: .gitattributes  .gitignore  README.md
esp32/: Cargo.toml
esp32/.cargo/: config.example.toml
esp32/src/: arm.rs  main.rs  pca9685.rs  protocol.rs  setup.rs  wifi.rs
pc/: Containerfile  podman_down.ps1  podman_up.ps1  run_panel.sh  xbox_control.ps1
pc/ros2_ws/src/arm_control/: package.xml  setup.cfg  setup.py
pc/ros2_ws/src/arm_control/arm_control/: __init__.py  motion_profile.py  pose_http_bridge_node.py  servo_driver_node.py
pc/ros2_ws/src/arm_control/config/: servo_driver.example.yaml  servo_driver_esp32.example.yaml
pc/ros2_ws/src/arm_control/launch/: driver.launch.py
pc/ros2_ws/src/arm_control/resource/: arm_control
pc/ros2_ws/src/arm_debug/: package.xml  setup.cfg  setup.py
pc/ros2_ws/src/arm_debug/arm_debug/: __init__.py  joint_command_cli.py  joint_state_mirror_node.py  pose_command_cli.py  pose_debug_panel.py
pc/ros2_ws/src/arm_debug/launch/: visual_debug.launch.py
pc/ros2_ws/src/arm_debug/resource/: arm_debug
pc/ros2_ws/src/arm_description/: package.xml  setup.cfg  setup.py
pc/ros2_ws/src/arm_description/arm_description/: __init__.py
pc/ros2_ws/src/arm_description/launch/: display.launch.py
pc/ros2_ws/src/arm_description/meshes/: Alt_Kasa.stl  Bilek.stl  Disli.stl  El.stl  El_Ust.stl  Mil_1.stl  Mil_2.stl  Mil_3.stl  Mil_Disli.stl  On_Kol.stl  Parmak_2_X_2.stl  Parmak_Disli X 2.stl  Parmak_X_2.stl  Servo_Cable_Holder.stl  Servo_Disli.stl  Tabla_Alt.stl
pc/ros2_ws/src/arm_description/resource/: arm_description
pc/ros2_ws/src/arm_description/rviz/: arm_debug.rviz
pc/ros2_ws/src/arm_description/urdf/: arm_platform.urdf.xacro
stl/: Alt_Govde.stl  Alt_Kapak.stl  Alt_Kol.stl  Jack_Cover.stl
