[package]
name = "esp32-arm"
version = "0.1.0"
authors = ["arm-stack"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-arm"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "1.0.100"
embedded-svc = "0.28.1"
esp-idf-hal = "0.45.2"
esp-idf-svc = "0.51"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embuild = "0.33"
