<?xml version="1.0"?>
<package format="3">
  <name>arm_control</name>
  <version>0.1.0</version>
  <description>Servo driver and precision-first motion profile for the ESP32 arm platform.</description>
  <maintainer email="dev@example.com">arm-stack</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
