<?xml version="1.0"?>
<package format="3">
  <name>arm_debug</name>
  <version>0.1.0</version>
  <description>Visualization debug helpers for the ESP32 arm platform.</description>
  <maintainer email="dev@example.com">arm-stack</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>arm_control</exec_depend>
  <depend>python_qt_binding</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
