<?xml version="1.0"?>
<package format="3">
  <name>arm_description</name>
  <version>0.1.0</version>
  <description>Robot description resources for the ESP32 arm platform.</description>
  <maintainer email="dev@example.com">arm-stack</maintainer>
  <license>MIT</license>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
